# GREP

./: .gitignore  INSTALL  README  configure  configure.ac
ccontainers/: INSTALL
examples/properties/contre_exemple1/: offline_input  prop.tmtn
examples/properties/optimal1/: input_offline  prop1.aux  prop1.tex  prop1.tmtn
examples/properties/paper/: input_offline  propPaper.tmtn
examples/properties/suppress/: input_offline  propButton.tmtn
include/: clock.h  dbmutils.h  game_graph.h  parser_tmdautmtn.h  print_game.h  serialize.h
src/: Makefile.am  clock.c  complex_example.tmtn  dbmutils.c  game_graph.c  game_graph.h  parser.y  print_game.c  scanner.l  serialize.c  simple_example.tmtn
src/offline/: Makefile.am  main.c  parser_offline_input.y  scanner_offline_input.l
src/online/: Makefile.am  main.c
tests/offline/: cosafety.tmtn  game_enf_offline  input_error  odd.tmtn  propInfZg.tmtn  propPaper.tmtn  response.tmtn  safety.tmtn  safety_two_clocks.tmtn
tests/offline/benchmarks/safety_two_clocks/: generate_times.sh
tests/offline/benchmarks_fast/: computeMeans.py  plot.r
tests/offline/benchmarks_fast/cosafety/: generate_times.sh
tests/offline/benchmarks_fast/response/: generate_times.sh
tests/offline/benchmarks_fast/safety/: generate_times.sh
tests/offline/benchmarks_opti/: .gitignore  Makefile  computeMeans.py  computeStats.c  generate_times.sh  generate_traces  plot.r
tests/offline/benchmarks_opti/cosafety/: .gitignore  computeMeans.py  computeStats  generate_inputs.sh  generate_times.sh
tests/offline/benchmarks_opti/response/: .gitignore  clean.sh  generate_inputs.sh  generate_times.sh  plot.r
tests/offline/benchmarks_opti/safety/: .gitignore  generate_inputs.sh  generate_times.sh  plot.r
tests/offline/benchmarks_opti/safety_two_clocks/: .gitignore  generate_times.sh
